--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -492,7 +492,7 @@
     "description": "Reload all"
   },
   "commandLabelURLLevelUp": {
-    "message": "URL hierarchy up",
+    "message": "URL o úroveň vyššie",
     "description": "URL hierarchy up"
   },
   "commandLabelIncreaseURLNumber": {
@@ -522,6 +522,10 @@
   "commandLabelSearchTextSelection": {
     "message": "Vyhľadať vybraný text",
     "description": "Search selected text"
+  },
+  "commandLabelSearchClipboard": {
+    "message": "Hľadať schránku",
+    "description": "Search clipboard"
   },
   "commandLabelCloseRightTabs": {
     "message": "Zatvoriť karty napravo",
@@ -622,6 +626,10 @@
   "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Nedávno zatvorené karty",
     "description": "[Popup] Recently closed tabs"
+  },
+  "commandLabelPopupSearchEngines": {
+    "message": "[Popup] Vyhľadávač",
+    "description": "[Popup] Search engines"
   },
   "commandLabelSendMessageToOtherAddon": {
     "message": "Poslať správu do iného rozšírenia",
@@ -791,6 +799,10 @@
     "message": "Spustí vyhľadávanie vybratého textu na webe.",
     "description": "Starts a web search of the selected text."
   },
+  "commandDescriptionSearchClipboard": {
+    "message": "Spustiť vyhľadávanie textu zo schránky na webe.",
+    "description": "Starts a web search of the clipboard text."
+  },
   "commandDescriptionCloseRightTabs": {
     "message": "Zatvorí všetky karty na pravej strane.",
     "description": "Closes all tabs to the right side."
@@ -891,6 +903,10 @@
     "message": "Otvorí vyskakovacie okno obsahujúce zoznam všetkých nedávno zatvorených kariet a ponúka možnosť obnoviť ktorúkoľvek z nich.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
+  "commandDescriptionPopupSearchEngines": {
+    "message": "Otvorí ponuku obsahujúcu zoznam všetkých nainštalovaných vyhľadávačov a ponúkne možnosť vyhľadať vybratý text jedným z nich.",
+    "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
+  },
   "commandDescriptionSendMessageToOtherAddon": {
     "message": "Odošle vlastnú správu do iného rozšírenia. Toto umožňuje používať funkcie ostatných rozšírení.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
@@ -963,6 +979,10 @@
     "message": "Otvoriť prázdnu kartu",
     "description": "Open empty tab"
   },
+  "commandSettingLabelOpenEmptyWindow": {
+    "message": "Otvoriť prázdne okno",
+    "description": "Open empty window"
+  },
   "commandSettingLabelSearchEngineURL": {
     "message": "URL vyhľadávača",
     "description": "Search engine URL"
@@ -986,6 +1006,30 @@
   "commandSettingLabelParseMessage": {
     "message": "Analyzovať správu",
     "description": "Parse message"
+  },
+  "commandSettingLabelTabOrder": {
+    "message": "Poradie kariet",
+    "description": "Tab order"
+  },
+  "commandSettingLabelTabOrderNone": {
+    "message": "žiadne (predvolené)",
+    "description": "none (default)"
+  },
+  "commandSettingLabelTabOrderLastAccessedAsc": {
+    "message": "naposledy otvorené vzostupne",
+    "description": "last accessed ascending"
+  },
+  "commandSettingLabelTabOrderLastAccessedDesc": {
+    "message": "naposledy otvorené zostupne",
+    "description": "last accessed descending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalAsc": {
+    "message": "abecedne vzostupne",
+    "description": "alphabetical ascending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalDesc": {
+    "message": "abecedne zostupne",
+    "description": "alphabetical descending"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Určuje pozíciu novej karty k aktuálnej karte.",
@@ -1027,9 +1071,13 @@
     "message": "Determines if an empty tab should be opened if no URL or link was selected.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptyWindow": {
+    "message": "Determines if an empty window should be opened if no URL or link was selected.",
+    "description": "Determines if an empty window should be opened if no URL or link was selected."
+  },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "The URL to query a search by appending the search text to the end.",
-    "description": "The URL to query a search by appending the search text to the end."
+    "message": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used.",
+    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "Determines if the \"Save As\" dialog should appear or the file should be downloaded silently to the users default download folder.",
@@ -1050,6 +1098,10 @@
   "commandSettingDescriptionParseMessage": {
     "message": "Determines if the message should be serialized as a JavaScript object.",
     "description": "Determines if the message should be serialized as a JavaScript object."
+  },
+  "commandSettingDescriptionTabOrder": {
+    "message": "Poradie zobrazených kariet podľa špecifických charakteristík.",
+    "description": "Orders the displayed tabs by a specific characteristic."
   },
   "commandErrorNotificationTitle": {
     "message": "Príkaz $COMMAND$ zlyhal.",
@@ -1172,6 +1224,10 @@
   "permissionLabelDownloads": {
     "message": "Sťahovanie",
     "description": "Downloads"
+  },
+  "permissionLabelSearch": {
+    "message": "Vyhľadať",
+    "description": "Search"
   },
   "toggleButtonOn": {
     "message": "ZAP",
