--- a/src/_locales/vi_VN/messages.json
+++ b/src/_locales/vi_VN/messages.json
@@ -60,7 +60,7 @@
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
-    "message": "Thởi gian đợi cử chỉ",
+    "message": "Thời gian đợi cử chỉ",
     "description": "Gesture timeout"
   },
   "settingLabelTimeoutDuration": {
@@ -68,7 +68,7 @@
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Phím để ngừng đợi củ chỉ",
+    "message": "Phím để ngừng cử chỉ",
     "description": "Gesture suppression key"
   },
   "settingLabelNoneKey": {
@@ -523,6 +523,10 @@
     "message": "Tìm kiếm văn bản được chọn",
     "description": "Search selected text"
   },
+  "commandLabelSearchClipboard": {
+    "message": "Tìm kiếm vùng nhớ tạm",
+    "description": "Search clipboard"
+  },
   "commandLabelCloseRightTabs": {
     "message": "Đóng các tab bên phải",
     "description": "Close right tabs"
@@ -622,6 +626,10 @@
   "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Các tab được đóng gần đây",
     "description": "[Popup] Recently closed tabs"
+  },
+  "commandLabelPopupSearchEngines": {
+    "message": "[Popup] Cỗ máy tìm kiếm",
+    "description": "[Popup] Search engines"
   },
   "commandLabelSendMessageToOtherAddon": {
     "message": "Gửi tin nhắn đến tiện ích khác",
@@ -791,6 +799,10 @@
     "message": "Tìm kiếm văn bản được chọn trên web.",
     "description": "Starts a web search of the selected text."
   },
+  "commandDescriptionSearchClipboard": {
+    "message": "Thực hiện tìm kiếm nội dung văn bản trong vùng nhớ tạm.",
+    "description": "Starts a web search of the clipboard text."
+  },
   "commandDescriptionCloseRightTabs": {
     "message": "Đóng các tab phía bên phải.",
     "description": "Closes all tabs to the right side."
@@ -800,7 +812,7 @@
     "description": "Closes all tabs to the left side, excluding pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
-    "message": "Closes all tabs except of the current tab and pinned tabs.",
+    "message": "Đóng tất cả các tab trừ tab hiện tại và các tab đã ghim.",
     "description": "Closes all tabs except of the current tab and pinned tabs."
   },
   "commandDescriptionSaveTabAsPDF": {
@@ -891,6 +903,10 @@
     "message": "Mở popup chứa tất cả các tab đã đóng gần đây để khôi phục một trong số đó.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
+  "commandDescriptionPopupSearchEngines": {
+    "message": "Mở một popup có chứa danh sách tất cả các cỗ máy tìm kiếm đã cài đặt và cung cấp khả năng tìm kiếm đoạn văn bản được lựa chọn với một trong số các cỗ máy tìm kiếm.",
+    "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
+  },
   "commandDescriptionSendMessageToOtherAddon": {
     "message": "Sẽ gửi một tin nhắn tùy chỉnh cho các tiện ích khác. Điều này cho phép việc sử dụng các chức năng của tiện ích khác.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
@@ -963,6 +979,10 @@
     "message": "Mở tab trống",
     "description": "Open empty tab"
   },
+  "commandSettingLabelOpenEmptyWindow": {
+    "message": "Open empty window",
+    "description": "Open empty window"
+  },
   "commandSettingLabelSearchEngineURL": {
     "message": "Máy tìm kiếm",
     "description": "Search engine URL"
@@ -986,6 +1006,30 @@
   "commandSettingLabelParseMessage": {
     "message": "Phân tích tin nhắn",
     "description": "Parse message"
+  },
+  "commandSettingLabelTabOrder": {
+    "message": "Tab order",
+    "description": "Tab order"
+  },
+  "commandSettingLabelTabOrderNone": {
+    "message": "none (default)",
+    "description": "none (default)"
+  },
+  "commandSettingLabelTabOrderLastAccessedAsc": {
+    "message": "last accessed ascending",
+    "description": "last accessed ascending"
+  },
+  "commandSettingLabelTabOrderLastAccessedDesc": {
+    "message": "last accessed descending",
+    "description": "last accessed descending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalAsc": {
+    "message": "alphabetical ascending",
+    "description": "alphabetical ascending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalDesc": {
+    "message": "alphabetical descending",
+    "description": "alphabetical descending"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Xác định vị trí tab mới so với các tab hiện tại.",
@@ -1027,9 +1071,13 @@
     "message": "Quyết định nếu một tab trống nên được mở ra nếu không có URL hoặc liên kết được chọn.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptyWindow": {
+    "message": "Determines if an empty window should be opened if no URL or link was selected.",
+    "description": "Determines if an empty window should be opened if no URL or link was selected."
+  },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "URL để truy vấn tìm kiếm bằng cách cung cấp thêm văn bản tìm kiếm để kết thúc.",
-    "description": "The URL to query a search by appending the search text to the end."
+    "message": "Một URL tuỳ biến cho đoạn văn bản tìm kiếm được gắn vào. Nếu bỏ qua, cỗ máy tìm kiếm mặc định của trình duyệt sẽ được sử dụng.",
+    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "Xác định nếu xuất hiện hộp thoại \"Save As\" hoặc các tập tin nên được tải âm thầm đến thư mục tải về mặc định của người dùng.",
@@ -1050,6 +1098,10 @@
   "commandSettingDescriptionParseMessage": {
     "message": "Xác định nếu tin nhắn sẽ được chuyển sang JavaScript object.",
     "description": "Determines if the message should be serialized as a JavaScript object."
+  },
+  "commandSettingDescriptionTabOrder": {
+    "message": "Orders the displayed tabs by a specific characteristic.",
+    "description": "Orders the displayed tabs by a specific characteristic."
   },
   "commandErrorNotificationTitle": {
     "message": "\"$COMMAND$\" lệnh đã thất bại.",
@@ -1094,7 +1146,7 @@
     "description": "Edit Gesture"
   },
   "gesturePopupRecordingAreaText": {
-    "message": "Use the $MOUSEBUTTON$ mouse button to record a new gesture.",
+    "message": "Sử dụng nút chuột $MOUSEBUTTON$ để ghi lại một cử chỉ mới.",
     "description": "Use the right mouse button to record a new gesture.",
     "placeholders": {
       "mousebutton": {
@@ -1104,15 +1156,15 @@
     }
   },
   "gesturePopupMouseButtonLeft": {
-    "message": "left",
+    "message": "trái",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupMouseButtonRight": {
-    "message": "right",
+    "message": "phải",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupMouseButtonMiddle": {
-    "message": "middle",
+    "message": "giữa",
     "description": "This will replace the placeholder in \"Use the $MOUSEBUTTON$ mouse button to record a new gesture.\""
   },
   "gesturePopupLabelCommand": {
@@ -1140,7 +1192,7 @@
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
   "gesturePopupSaveButton": {
-    "message": "Save",
+    "message": "Lưu",
     "description": "Save"
   },
   "gesturePopupDirectionsNotificationDuplicate": {
@@ -1172,6 +1224,10 @@
   "permissionLabelDownloads": {
     "message": "Tải",
     "description": "Downloads"
+  },
+  "permissionLabelSearch": {
+    "message": "Tìm kiếm",
+    "description": "Search"
   },
   "toggleButtonOn": {
     "message": "B\\1EAD t",
