--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -523,6 +523,10 @@
     "message": "搜索选中文本",
     "description": "Search selected text"
   },
+  "commandLabelSearchClipboard": {
+    "message": "搜索剪贴板",
+    "description": "Search clipboard"
+  },
   "commandLabelCloseRightTabs": {
     "message": "关闭右侧标签页",
     "description": "Close right tabs"
@@ -622,6 +626,10 @@
   "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] 最近关闭的标签页",
     "description": "[Popup] Recently closed tabs"
+  },
+  "commandLabelPopupSearchEngines": {
+    "message": "[Popup] 搜索引擎",
+    "description": "[Popup] Search engines"
   },
   "commandLabelSendMessageToOtherAddon": {
     "message": "发送消息到其他附加组件",
@@ -791,6 +799,10 @@
     "message": "网络搜索选中文本",
     "description": "Starts a web search of the selected text."
   },
+  "commandDescriptionSearchClipboard": {
+    "message": "网络搜索剪贴板中的文本",
+    "description": "Starts a web search of the clipboard text."
+  },
   "commandDescriptionCloseRightTabs": {
     "message": "关闭右侧的所有标签页。",
     "description": "Closes all tabs to the right side."
@@ -891,6 +903,10 @@
     "message": "打开一个弹出窗口，其中列出了最近关闭的标签页，并可恢复其中一个。",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
+  "commandDescriptionPopupSearchEngines": {
+    "message": "打开一个弹出式菜单，其中包含已安装搜索引擎的列表，您可以用其中一个搜索引擎搜索选中文本。",
+    "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
+  },
   "commandDescriptionSendMessageToOtherAddon": {
     "message": "向另一个附加组件发送一个自定义消息。这可以调用其他附加组件的功能。",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
@@ -963,6 +979,10 @@
     "message": "打开空标签页",
     "description": "Open empty tab"
   },
+  "commandSettingLabelOpenEmptyWindow": {
+    "message": "打开空窗口",
+    "description": "Open empty window"
+  },
   "commandSettingLabelSearchEngineURL": {
     "message": "搜索引擎网址",
     "description": "Search engine URL"
@@ -986,6 +1006,30 @@
   "commandSettingLabelParseMessage": {
     "message": "解析消息",
     "description": "Parse message"
+  },
+  "commandSettingLabelTabOrder": {
+    "message": "Tab order",
+    "description": "Tab order"
+  },
+  "commandSettingLabelTabOrderNone": {
+    "message": "none (default)",
+    "description": "none (default)"
+  },
+  "commandSettingLabelTabOrderLastAccessedAsc": {
+    "message": "last accessed ascending",
+    "description": "last accessed ascending"
+  },
+  "commandSettingLabelTabOrderLastAccessedDesc": {
+    "message": "last accessed descending",
+    "description": "last accessed descending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalAsc": {
+    "message": "alphabetical ascending",
+    "description": "alphabetical ascending"
+  },
+  "commandSettingLabelTabOrderAlphabeticalDesc": {
+    "message": "alphabetical descending",
+    "description": "alphabetical descending"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "决定新标签页相对于当前标签页的位置。",
@@ -1027,9 +1071,13 @@
     "message": "决定如果没有选择网址或链接，是否打开一个空标签页。",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptyWindow": {
+    "message": "决定如果没有选择网址或链接，是否打开一个空窗口。",
+    "description": "Determines if an empty window should be opened if no URL or link was selected."
+  },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "执行搜索时的网址，搜索文本会附加在末尾。",
-    "description": "The URL to query a search by appending the search text to the end."
+    "message": "附加一个搜索文本的自定义搜索网址。如果省略，将使用浏览器的默认搜索引擎。",
+    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "决定是否应显示“另存为”对话框， 或将文件悄悄下载到用户默认的“下载”文件夹。",
@@ -1050,6 +1098,10 @@
   "commandSettingDescriptionParseMessage": {
     "message": "决定消息是否应该序列化为一个 JavaScript 对象。",
     "description": "Determines if the message should be serialized as a JavaScript object."
+  },
+  "commandSettingDescriptionTabOrder": {
+    "message": "Orders the displayed tabs by a specific characteristic.",
+    "description": "Orders the displayed tabs by a specific characteristic."
   },
   "commandErrorNotificationTitle": {
     "message": "“$COMMAND$”命令失败。",
@@ -1172,6 +1224,10 @@
   "permissionLabelDownloads": {
     "message": "下载项",
     "description": "Downloads"
+  },
+  "permissionLabelSearch": {
+    "message": "搜索",
+    "description": "Search"
   },
   "toggleButtonOn": {
     "message": "\\5F00",
