--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -370,8 +370,8 @@
     "description": "The selected file does not match the required file type."
   },
   "aboutResetNotificationConfirm": {
-    "message": "All settings including gestures are reset. This cannot be undone!",
-    "description": "All settings including gestures are reset. This cannot be undone!"
+    "message": "All settings including gestures will be reset. This cannot be undone!",
+    "description": "All settings including gestures will be reset. This cannot be undone!"
   },
 
   "commandLabelToggleBookmark": {
